# Text-2-Sql-LangGraph

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  sample.ipynb  trial.ipynb  trial_chatbot.ipynb  trial_with_memory.ipynb  trial_with_memory.py  trial_with_memory_schema_catalog.ipynb  trial_with_memory_schema_catalog.py
