[project]
name = "text-2-sql-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "mcp>=1.23.1",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]
